--- a/resultados/resultados_exploracion.ipynb
+++ b/resultados/resultados_exploracion.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "6a74f15a",
    "metadata": {},
    "outputs": [
@@ -441,6 +441,81 @@
     "y_pred = model.predict(X_test)\n",
     "\n",
     "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "13bd5ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cobertura Word2Vec (después de limpieza): 92.80%\n",
+      "\n",
+      "Palabras OOV más frecuentes (nuevo modelo):\n",
+      "approaching     4\n",
+      "hop             4\n",
+      "weakening       4\n",
+      "bridge          4\n",
+      "hinges          4\n",
+      "explanation     4\n",
+      "shakes          4\n",
+      "belong          4\n",
+      "kindly          4\n",
+      "giant           4\n",
+      "containing      4\n",
+      "advised         4\n",
+      "slowing         4\n",
+      "filled          4\n",
+      "argument        4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from gensim.models import Word2Vec\n",
+    "from collections import Counter\n",
+    "import numpy as np\n",
+    "import ast\n",
+    "\n",
+    "# Función auxiliar para medir cobertura\n",
+    "def compute_coverage(tokens_list, model):\n",
+    "    total, covered = 0, 0\n",
+    "    oov = Counter()\n",
+    "    for tokens in tokens_list:\n",
+    "        for t in tokens:\n",
+    "            total += 1\n",
+    "            if t in model.wv:\n",
+    "                covered += 1\n",
+    "            else:\n",
+    "                oov[t] += 1\n",
+    "    coverage = covered / total * 100\n",
+    "    return coverage, oov\n",
+    "\n",
+    "# Cargar dataset preprocesado\n",
+    "df = pd.read_parquet(\"../data/train_preprocessed.parquet\")\n",
+    "\n",
+    "# Asegurar que tokens sean listas (no strings)\n",
+    "if isinstance(df[\"tokens\"].iloc[0], str):\n",
+    "    df[\"tokens\"] = df[\"tokens\"].apply(ast.literal_eval)\n",
+    "\n",
+    "# Cargar nuevo modelo Word2Vec (entrenado tras limpiar emojis y contracciones)\n",
+    "w2v_new = Word2Vec.load(\"../diplomacy/models/embeddings/word2vec.model\")\n",
+    "new_coverage, new_oov = compute_coverage(df[\"tokens\"], w2v_new)\n",
+    "print(f\"Cobertura Word2Vec (después de limpieza): {new_coverage:.2f}%\")\n",
+    "\n",
+    "# Mostrar algunas palabras fuera del vocabulario\n",
+    "print(\"\\nPalabras OOV más frecuentes (nuevo modelo):\")\n",
+    "for word, count in new_oov.most_common(15):\n",
+    "    print(f\"{word:<15} {count}\")\n",
+    "\n",
+    "# Si tienes ambos modelos, calcula mejora\n",
+    "if old_coverage:\n",
+    "    diff = new_coverage - old_coverage\n",
+    "    print(f\"\\nMejora en cobertura: {diff:+.2f} puntos porcentuales\")\n"
    ]
   }
  ],
