--- a/resultados/resultados_exploracion.ipynb
+++ b/resultados/resultados_exploracion.ipynb
@@ -173,7 +173,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
+   "id": "3bd2d2b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>messages</th>\n",
+       "      <th>text_clean</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>lemmas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Germany!\\n\\nJust the person I want to speak wi...</td>\n",
+       "      <td>germany just the person i want to speak with i...</td>\n",
+       "      <td>['germany', 'person', 'want', 'speak', 'somewh...</td>\n",
+       "      <td>['germany', 'person', 'want', 'speak', 'somewh...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>You've whet my appetite, Italy. What's the sug...</td>\n",
+       "      <td>youve whet my appetite italy whats the suggestion</td>\n",
+       "      <td>['ve', 'whet', 'appetite', 'italy', 's', 'sugg...</td>\n",
+       "      <td>['ve', 'whet', 'appetite', 'italy', 's', 'sugg...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>It seems like there are a lot of ways that cou...</td>\n",
+       "      <td>it seems like there are a lot of ways that cou...</td>\n",
+       "      <td>['like', 'lot', 'ways', 'wrong', 'nt', 'france...</td>\n",
+       "      <td>['like', 'lot', 'way', 'wrong', 'not', 'france...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Yeah, I can’t say I’ve tried it and it works, ...</td>\n",
+       "      <td>yeah i can t say i ve tried it and it works ca...</td>\n",
+       "      <td>['yeah', 't', 've', 'tried', 'works', 'cause',...</td>\n",
+       "      <td>['yeah', 't', 've', 'try', 'work', 'cause', 'v...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I am just sensing that you don’t like this ide...</td>\n",
+       "      <td>i am just sensing that you don t like this ide...</td>\n",
+       "      <td>['sensing', 'don', 't', 'like', 'idea', 'shall...</td>\n",
+       "      <td>['sense', 'don', 't', 'like', 'idea', 'shall',...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Any thoughts?</td>\n",
+       "      <td>any thoughts</td>\n",
+       "      <td>['thoughts']</td>\n",
+       "      <td>['thought']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sorry Italy I've been away doing, um, German t...</td>\n",
+       "      <td>sorry italy ive been away doing um german thin...</td>\n",
+       "      <td>['sorry', 'italy', 've', 'away', 'um', 'german...</td>\n",
+       "      <td>['sorry', 'italy', 've', 'away', 'um', 'german...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>I don't think I'm ready to go for that idea, h...</td>\n",
+       "      <td>i dont think im ready to go for that idea howe...</td>\n",
+       "      <td>['nt', 'think', 'm', 'ready', 'idea', 'd', 'go...</td>\n",
+       "      <td>['not', 'think', 'm', 'ready', 'idea', 'd', 'g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>But I think I can get over “Lagergate” and we ...</td>\n",
+       "      <td>but i think i can get over lagergate and we ca...</td>\n",
+       "      <td>['think', 'lagergate', 'friends', 'right', 'th...</td>\n",
+       "      <td>['think', 'lagergate', 'friend', 'right', 'thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>We haven't even passed a season yet and you ha...</td>\n",
+       "      <td>we havent even passed a season yet and you hav...</td>\n",
+       "      <td>['nt', 'passed', 'season', 'reliable', 'ally',...</td>\n",
+       "      <td>['not', 'pass', 'season', 'reliable', 'ally', ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            messages  \\\n",
+       "0  Germany!\\n\\nJust the person I want to speak wi...   \n",
+       "1  You've whet my appetite, Italy. What's the sug...   \n",
+       "2  It seems like there are a lot of ways that cou...   \n",
+       "3  Yeah, I can’t say I’ve tried it and it works, ...   \n",
+       "4  I am just sensing that you don’t like this ide...   \n",
+       "5                                      Any thoughts?   \n",
+       "6  Sorry Italy I've been away doing, um, German t...   \n",
+       "7  I don't think I'm ready to go for that idea, h...   \n",
+       "8  But I think I can get over “Lagergate” and we ...   \n",
+       "9  We haven't even passed a season yet and you ha...   \n",
+       "\n",
+       "                                          text_clean  \\\n",
+       "0  germany just the person i want to speak with i...   \n",
+       "1  youve whet my appetite italy whats the suggestion   \n",
+       "2  it seems like there are a lot of ways that cou...   \n",
+       "3  yeah i can t say i ve tried it and it works ca...   \n",
+       "4  i am just sensing that you don t like this ide...   \n",
+       "5                                       any thoughts   \n",
+       "6  sorry italy ive been away doing um german thin...   \n",
+       "7  i dont think im ready to go for that idea howe...   \n",
+       "8  but i think i can get over lagergate and we ca...   \n",
+       "9  we havent even passed a season yet and you hav...   \n",
+       "\n",
+       "                                              tokens  \\\n",
+       "0  ['germany', 'person', 'want', 'speak', 'somewh...   \n",
+       "1  ['ve', 'whet', 'appetite', 'italy', 's', 'sugg...   \n",
+       "2  ['like', 'lot', 'ways', 'wrong', 'nt', 'france...   \n",
+       "3  ['yeah', 't', 've', 'tried', 'works', 'cause',...   \n",
+       "4  ['sensing', 'don', 't', 'like', 'idea', 'shall...   \n",
+       "5                                       ['thoughts']   \n",
+       "6  ['sorry', 'italy', 've', 'away', 'um', 'german...   \n",
+       "7  ['nt', 'think', 'm', 'ready', 'idea', 'd', 'go...   \n",
+       "8  ['think', 'lagergate', 'friends', 'right', 'th...   \n",
+       "9  ['nt', 'passed', 'season', 'reliable', 'ally',...   \n",
+       "\n",
+       "                                              lemmas  \n",
+       "0  ['germany', 'person', 'want', 'speak', 'somewh...  \n",
+       "1  ['ve', 'whet', 'appetite', 'italy', 's', 'sugg...  \n",
+       "2  ['like', 'lot', 'way', 'wrong', 'not', 'france...  \n",
+       "3  ['yeah', 't', 've', 'try', 'work', 'cause', 'v...  \n",
+       "4  ['sense', 'don', 't', 'like', 'idea', 'shall',...  \n",
+       "5                                        ['thought']  \n",
+       "6  ['sorry', 'italy', 've', 'away', 'um', 'german...  \n",
+       "7  ['not', 'think', 'm', 'ready', 'idea', 'd', 'g...  \n",
+       "8  ['think', 'lagergate', 'friend', 'right', 'thi...  \n",
+       "9  ['not', 'pass', 'season', 'reliable', 'ally', ...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Volvemos a visualizar algunas lineas del texto procesado despues de arreglar los errores(emojis y letras sueltas)\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_parquet(\"../data/train_preprocessed.parquet\")\n",
+    "df.head(10)[[\"messages\", \"text_clean\", \"tokens\", \"lemmas\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8a926a53",
    "metadata": {},
    "outputs": [
@@ -181,8 +352,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulario BoW: 10434\n",
-      "Vocabulario TF-IDF: 10434\n"
+      "Vocabulario BoW: 8950\n",
+      "Vocabulario TF-IDF: 8950\n"
      ]
     },
     {
@@ -210,7 +381,7 @@
        " 'actually']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
